test/seq/cmdlists/invalid_ttl.err
SyntaxError: Invalid ttl command: expecting `(`, `[` or `=`
Line: 3, Column: 4
ttl-
   ^
